--- a/components/GetStarted.module.css
+++ b/components/GetStarted.module.css
@@ -1,5 +1,4 @@
 .container {
-  margin-top: var(--spacing-3xl);
   text-align: center;
 }
 
